# dovado

./: .coverage  .gitignore  .gitmodules  .python-version  LICENSE  README.md  README.md.tmp  README.org  config.yaml  objs.pkl  pyproject.toml  sample_record_1.csv  tight_setup_hold_pins.txt  vivado.jou  vivado_24761.backup.jou  vivado_26594.backup.jou  vivado_27256.backup.jou  vivado_28057.backup.jou  vivado_5274.backup.jou  vivado_7251.backup.jou
.Xil/Vivado-21851-pop-os/: elab.rtd
.Xil/Vivado-25852-pop-os/: elab.rtd
.Xil/Vivado-26029-pop-os/: elab.rtd
.Xil/Vivado-26204-pop-os/: elab.rtd
.Xil/Vivado-26769-pop-os/: elab.rtd
.Xil/Vivado-26934-pop-os/: elab.rtd
.Xil/Vivado-27123-pop-os/: elab.rtd
.Xil/Vivado-27385-pop-os/: elab.rtd
.Xil/Vivado-27523-pop-os/: elab.rtd
.Xil/Vivado-27785-pop-os/: elab.rtd
.Xil/Vivado-27833-pop-os/: elab.rtd
.Xil/Vivado-28276-pop-os/: elab.rtd
.Xil/Vivado-28279-pop-os/: elab.rtd
.Xil/Vivado-28511-pop-os/: elab.rtd
.Xil/Vivado-28691-pop-os/: elab.rtd
.Xil/Vivado-28878-pop-os/: elab.rtd
.Xil/Vivado-28885-pop-os/: elab.rtd
.Xil/Vivado-29086-pop-os/: elab.rtd
.Xil/Vivado-29903-pop-os/: elab.rtd
.Xil/Vivado-32598-pop-os/: elab.rtd
.Xil/Vivado-33305-pop-os/: elab.rtd
.Xil/Vivado-33473-pop-os/: elab.rtd
.Xil/Vivado-33621-pop-os/: elab.rtd
antlr/: SysVerilogHDLLexer.py  SysVerilogHDLParser.py  Verilog2001Listener.py  Verilog2001Parser.py  vhdlLexer.py  vhdlListener.py  vhdlParser.py
custom_metrics/: extension_score.py  test_metric.py
dovado_rtl/: fill.py  input.py  main.py  project_copy.py  vivado.py
dovado_rtl/boxers/: boxer.py
dovado_work/: box.sv  box.vhd  constraint.xdc  estimation_accuracy.csv  post_synth.dcp  post_synth_setup_timing.rpt  post_synth_util.xml  synthesis.tcl
examples/: custom_step.py  make_rocket.bash  parts_file  steps.json  verilog_traffic_lightdovado_work_file.sv
graph_generation/: README.md  common_charts.py  compute_hypervolume.py  generate.sh  generate_graphs.py  movado_charts.py  ndovadomo_charts.py
htmlcov/: index.html  src_dovado___init___py.html  src_dovado_box_component_py.html  src_dovado_doc_parsing_py.html  src_dovado_main_py.html  src_dovado_report_parsing_py.html  src_dovado_tcl_parsing_py.html  src_dovado_user_input_py.html  src_dovado_verilog_parsing_py.html  src_dovado_vhdl_parsing_py.html  src_dovado_vivado_interaction_py.html  status.json
movado_debug/: controller.csv  controller_learn_time.csv  mab.csv  mab_weight.csv
run_results/: run_1.pkl  run_2.pkl  run_3.pkl
tcl/: full_evalutate_point_frame.tcl  implementation.tcl  implementation_frame.tcl  synthesis.tcl  synthesis_frame.tcl  verilog_evaluate_point_frame.tcl  vhdl_evaluate_point_frame.tcl
tests/: compute_hypervolume.py  conftest.py  exploration  test_convolution.py  test_doc_parsing.py  test_dovado_rtl.py  test_estimation.py  test_fitness.py  test_frame_handling.py  test_genetic_algorithm.py  test_input.py  test_main.py  test_parsing_data.py  test_point_evaluation.py  test_project_copy.py  test_report_parsing.py  test_rocket_chip.py  test_scala_parsing.py  test_src_parsing.py  test_user_input.py  test_verilog_parsing.py  test_vhdl_parsing.py  test_vivado_interaction.py  vivado_2019_2_mock_data.py
verilog/: box (conflicted copy 2020-10-05 014124).sv  box (conflicted copy 2020-10-05 021656).sv  box (conflicted copy 2020-10-12 122032).sv  box (conflicted copy 2020-10-12 122822).sv  box (conflicted copy 2020-10-12 134815).sv  box (conflicted copy 2020-10-12 152842).sv  box.sv  box_frame.sv  local_src.sv
vhdl/: box.vhd  box_frame.vhd  box_frame.vhdl  local_src.vhd
vivado_out/: post_impl_setup_timing.rpt  post_impl_util.xml  post_place.dcp  post_route.dcp  post_synth (conflicted copy 2020-10-12 203454).dcp  post_synth.dcp  post_synth_setup_timing.rpt  post_synth_util.xml
xdc/: constraint.xdc
(+1174 files in other folders)
